syntax = "proto3";

package wendycloud.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service AssetService {
  rpc CreateAsset(CreateAssetRequest) returns (Asset);
  rpc GetAsset(GetAssetRequest) returns (Asset);
  rpc UpdateAsset(UpdateAssetRequest) returns (Asset);
  rpc DeleteAsset(DeleteAssetRequest) returns (DeleteAssetResponse);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
  rpc ListAssetChildren(ListAssetChildrenRequest) returns (ListAssetChildrenResponse);
  rpc GetAssetLineage(GetAssetLineageRequest) returns (GetAssetLineageResponse);
}

message Asset {
  int32 id = 1;
  int32 organization_id = 2;
  optional int32 parent_asset_id = 3;
  string name = 4;
  string details = 5;
  string asset_type = 6;

  // Blob storage fields
  optional string blob_storage_url = 7;
  optional string blob_content_type = 8;
  optional int64 blob_size_bytes = 9;
  optional google.protobuf.Struct blob_metadata = 10;

  // Compute device fields
  bool is_compute_device = 11;
  optional string device_type = 12;
  optional string architecture = 13;
  optional int32 cpu_cores = 14;
  optional int32 ram_mb = 15;
  optional int32 storage_gb = 16;
  optional string os_type = 17;
  optional string os_version = 18;
  optional string ip_address = 19;
  optional string mac_address = 20;

  // Tags for filtering and organization
  repeated string tags = 23;

  google.protobuf.Timestamp created_at = 21;
  google.protobuf.Timestamp updated_at = 22;
}

message CreateAssetRequest {
  int32 organization_id = 1;
  optional int32 parent_asset_id = 2;
  string name = 3;
  string details = 4;
  string asset_type = 5;

  optional string blob_storage_url = 6;
  optional string blob_content_type = 7;
  optional int64 blob_size_bytes = 8;
  optional google.protobuf.Struct blob_metadata = 9;

  bool is_compute_device = 10;
  optional string device_type = 11;
  optional string architecture = 12;
  optional int32 cpu_cores = 13;
  optional int32 ram_mb = 14;
  optional int32 storage_gb = 15;
  optional string os_type = 16;
  optional string os_version = 17;
  optional string ip_address = 18;
  optional string mac_address = 19;
  repeated string tags = 20;
}

message GetAssetRequest {
  int32 id = 1;
}

message UpdateAssetRequest {
  int32 id = 1;
  optional string name = 2;
  optional string details = 3;
  optional string blob_storage_url = 4;
  optional string blob_content_type = 5;
  optional int64 blob_size_bytes = 6;
  optional google.protobuf.Struct blob_metadata = 7;
  optional string device_type = 8;
  optional string architecture = 9;
  optional int32 cpu_cores = 10;
  optional int32 ram_mb = 11;
  optional int32 storage_gb = 12;
  optional string os_type = 13;
  optional string os_version = 14;
  optional string ip_address = 15;
  optional string mac_address = 16;
  repeated string tags = 17;
}

message DeleteAssetRequest {
  int32 id = 1;
}

message DeleteAssetResponse {
  bool success = 1;
}

message ListAssetsRequest {
  int32 organization_id = 1;
  optional bool is_compute_device = 2;
  int32 page_size = 3;
  string page_token = 4;
  optional string filter = 5;  // Filter by name, details, asset_type, device_type, or tags
}

message ListAssetsResponse {
  repeated Asset assets = 1;
  string next_page_token = 2;
}

message ListAssetChildrenRequest {
  int32 parent_asset_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListAssetChildrenResponse {
  repeated Asset assets = 1;
  string next_page_token = 2;
}

message GetAssetLineageRequest {
  int32 asset_id = 1;
}

message GetAssetLineageResponse {
  // The root asset (top-most parent)
  Asset root_asset = 1;
  // All assets in the lineage tree (including root and all descendants)
  repeated Asset all_assets = 2;
  // The asset ID that was requested (for highlighting)
  int32 requested_asset_id = 3;
}
